[package]
name = "mcl_ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-msm = "0.3.0-alpha.1"
ark-std = "0.4.0"
mcl_rust = "1.0.1"
num-bigint = "0.4.4"
