[package]
name = "mcl_ark"
version = "0.1.0"
authors = ["MITSUNARI Shigeo <herumi@nifty.com>"]
description = "conversion functions between mcl-rust and ark"
license = "BSD-3-Clause OR MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-msm = "0.3.0-alpha.1"
ark-std = "0.4.0"
mcl_rust = "1.0.1"
num-bigint = "0.4.4"
